---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2023-03-19
  Major Features:
    - Initial release of mod.
    - Adds the /toggle_expansion command to toggle biter expansion.