@@ -6,7 +6,6 @@ not-admin=Only admins are allowed to use these commands.
 expansion-enabled=Biter expansion enabled.
 expansion-disabled=Biter expansion disabled.
 expansion-disabling-not-allowed=Disabling of biter expansion is not allowed.
-toggle-cmd-help=Toggles biter expansion on or off.
-enable-cmd-help=Enables biter expansion.
-disable-cmd-help=Disables biter expansion.
-check-cmd-help=Checks current status of biter expansion.
+expansion-is-enabled=Biter expansion is enabled.
+expansion-is-disabled=Biter expansion is disabled.
+cmd-help=Gives current expansion status without an argument. Pass 'toggle', 'enable', or 'disable' to control expansion.
